# WebClient

./: README.md  api_routes.py  functions.py  notebook.py  pyproject.toml  settings.py  🏠_Home.py
pages/: 1_📝_Register.py  2_🔑_Login.py  3_💬_Chat.py  4_📚_My_Pdf's.py  5_🚪_Logout.py  6_Link.py
